gccida/c1/conditions_mutex_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/conditions_mutex_p/src/sched-deps.c:637:40: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
&& ( _DWORD)v2 == reverse_condition( ( rtx_code)v4) 
                                       ^~~~~~~~
                                       rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/conditions_mutex_p/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/conditions_mutex_p/src/sched-deps.c:637:49: error: expected ')'
&& ( _DWORD)v2 == reverse_condition( ( rtx_code)v4) 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/conditions_mutex_p/src/sched-deps.c:637:36: note: to match this '('
&& ( _DWORD)v2 == reverse_condition( ( rtx_code)v4) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/conditions_mutex_p/src/sched-deps.c:639:13: error: invalid operands to binary expression ('struct rtx_def' and 'struct rtx_def')
&& cond1[1] == cond2[1] ) 
   ~~~~~~~~ ^  ~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/conditions_mutex_p/src/obj/sched-deps.o] Error 1
